--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ body {
 
 .burger-menu.active span:nth-child(2) {
     opacity: 0;
+    transform: scale(0);
 }
 
 .burger-menu.active span:nth-child(3) {
